server/sql/parser/sql_parser.go
// Code generated from SqlParser.g4 by ANTLR 4.10.1. DO NOT EDIT.

package parser // SqlParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SqlParser struct {
	*antlr.BaseParser
}

var sqlparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sqlparserParserInit() {
	staticData := &sqlparserParserStaticData
	staticData.literalNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "'->'", "'*'", "'`'", "'\\'", "':'", "','",
		"'||'", "'-'", "'.'", "'=='", "'='", "'>='", "'>'", "'{'", "'['", "'<='",
		"'('", "'<'", "", "'%'", "'+'", "'?'", "'\"'", "'''", "'}'", "']'",
		"')'", "';'", "'/'", "'_'",
	}
	staticData.symbolicNames = []string{
		"", "WS", "AND", "ASC", "AVG", "BY", "COUNT", "CREATE", "DATABASE",
		"DEFAULT", "DELETE", "DESC", "EXISTS", "FROM", "GROUP", "HAVING", "IF",
		"INF", "INNER", "INSERT", "INTO", "JOIN", "LEFT", "LIMIT", "MAX", "MIN",
		"NAN_SQL", "NOT", "NULL_SQL", "OFFSET", "ON", "OR", "ORDER", "SELECT",
		"SET", "SUM", "TABLE", "UPDATE", "USE", "VALUE", "VALUES", "WHERE",
		"SECOND", "MINUTE", "HOUR", "DAY", "WEEK", "MONTH", "QUARTER", "YEAR",
		"IDENTIFIER", "FLOATING_LITERAL", "OCTAL_LITERAL", "DECIMAL_LITERAL",
		"HEXADECIMAL_LITERAL", "EXPONENT_NUM_PART", "STRING_LITERAL", "ARROW",
		"ASTERISK", "BACKQUOTE", "BACKSLASH", "COLON", "COMMA", "CONCAT", "DASH",
		"DOT", "EQ_DOUBLE", "EQ_SINGLE", "GE", "GT", "LBRACE", "LBRACKET", "LE",
		"LPAREN", "LT", "NOT_EQ", "PERCENT", "PLUS", "QUERY", "QUOTE_DOUBLE",
		"QUOTE_SINGLE", "RBRACE", "RBRACKET", "RPAREN", "SEMICOLON", "SLASH",
		"UNDERSCORE", "MULTI_LINE_COMMENT", "SINGLE_LINE_COMMENT", "WHITESPACE",
	}
	staticData.ruleNames = []string{
		"statement", "dmlStatement", "ddlStatement", "systemStatement", "createDatabase",
		"createTable", "tableSchemaClause", "tableElementExpr", "tableColumnDfnt",
		"insertStatement", "updateStatement", "deleteStatement", "setClause",
		"columnsClause", "insertValuesSpec", "insertMultiValue", "dataValue",
		"selectStatement", "fromClause", "whereClause", "groupByClause", "havingClause",
		"orderByClause", "orderByExpr", "limitClause", "offsetClause", "searchCondition",
		"predicate", "expression", "joinExpr", "joinOp", "useStatement", "columnTypeExpr",
		"columnExprList", "columnsExpr", "columnExpr", "aggregateFunction",
		"columnIdentifier", "nestedIdentifier", "constant", "realLiteral", "tableExpr",
		"tableIdentifier", "databaseIdentifier", "floatingLiteral", "numberLiteral",
		"literal", "interval", "keyword", "identifier", "enumValue", "ifNotExists",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SqlParserInit initializes any static state used to implement SqlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SqlParserInit() {
	staticData := &sqlparserParserStaticData
	staticData.once.Do(sqlparserParserInit)
}

// NewSqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSqlParser(input antlr.TokenStream) *SqlParser {
	SqlParserInit()
	this := new(SqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &sqlparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "SqlParser.g4"

	return this
}

// SqlParser tokens.
const (
	SqlParserEOF                 = antlr.TokenEOF
	SqlParserWS                  = 1
	SqlParserAND                 = 2
	SqlParserASC                 = 3
	SqlParserAVG                 = 4
	SqlParserBY                  = 5
	SqlParserCOUNT               = 6
	SqlParserCREATE              = 7
	SqlParserDATABASE            = 8
	SqlParserDEFAULT             = 9
	SqlParserDELETE              = 10
	SqlParserDESC                = 11
	SqlParserEXISTS              = 12
	SqlParserFROM                = 13
	SqlParserGROUP               = 14
	SqlParserHAVING              = 15
	SqlParserIF                  = 16
	SqlParserINF                 = 17
	SqlParserINNER               = 18
	SqlParserINSERT              = 19
	SqlParserINTO                = 20
	SqlParserJOIN                = 21
	SqlParserLEFT                = 22
	SqlParserLIMIT               = 23
	SqlParserMAX                 = 24
	SqlParserMIN                 = 25
	SqlParserNAN_SQL             = 26
	SqlParserNOT                 = 27
	SqlParserNULL_SQL            = 28
	SqlParserOFFSET              = 29
	SqlParserON                  = 30
	SqlParserOR                  = 31
	SqlParserORDER               = 32
	SqlParserSELECT              = 33
	SqlParserSET                 = 34
	SqlParserSUM                 = 35
	SqlParserTABLE               = 36
	SqlParserUPDATE              = 37
	SqlParserUSE                 = 38
	SqlParserVALUE               = 39
	SqlParserVALUES              = 40
	SqlParserWHERE               = 41
	SqlParserSECOND              = 42
	SqlParserMINUTE              = 43
	SqlParserHOUR                = 44
	SqlParserDAY                 = 45
	SqlParserWEEK                = 46
	SqlParserMONTH               = 47
	SqlParserQUARTER             = 48
	SqlParserYEAR                = 49
	SqlParserIDENTIFIER          = 50
	SqlParserFLOATING_LITERAL    = 51
	SqlParserOCTAL_LITERAL       = 52
	SqlParserDECIMAL_LITERAL     = 53
	SqlParserHEXADECIMAL_LITERAL = 54
	SqlParserEXPONENT_NUM_PART   = 55
	SqlParserSTRING_LITERAL      = 56
	SqlParserARROW               = 57
	SqlParserASTERISK            = 58
	SqlParserBACKQUOTE           = 59
	SqlParserBACKSLASH           = 60
	SqlParserCOLON               = 61
	SqlParserCOMMA               = 62
	SqlParserCONCAT              = 63
	SqlParserDASH                = 64
	SqlParserDOT                 = 65
	SqlParserEQ_DOUBLE           = 66
	SqlParserEQ_SINGLE           = 67
	SqlParserGE                  = 68
	SqlParserGT                  = 69
	SqlParserLBRACE              = 70
	SqlParserLBRACKET            = 71
	SqlParserLE                  = 72
	SqlParserLPAREN              = 73
	SqlParserLT                  = 74
	SqlParserNOT_EQ              = 75
	SqlParserPERCENT             = 76
	SqlParserPLUS                = 77
	SqlParserQUERY               = 78
	SqlParserQUOTE_DOUBLE        = 79
	SqlParserQUOTE_SINGLE        = 80
	SqlParserRBRACE              = 81
	SqlParserRBRACKET            = 82
	SqlParserRPAREN              = 83
	SqlParserSEMICOLON           = 84
	SqlParserSLASH               = 85
	SqlParserUNDERSCORE          = 86
	SqlParserMULTI_LINE_COMMENT  = 87
	SqlParserSINGLE_LINE_COMMENT = 88
	SqlParserWHITESPACE          = 89
)

// SqlParser rules.
const (
	SqlParserRULE_statement          = 0
	SqlParserRULE_dmlStatement       = 1
	SqlParserRULE_ddlStatement       = 2
	SqlParserRULE_systemStatement    = 3
	SqlParserRULE_createDatabase     = 4
	SqlParserRULE_createTable        = 5
	SqlParserRULE_tableSchemaClause  = 6
	SqlParserRULE_tableElementExpr   = 7
	SqlParserRULE_tableColumnDfnt    = 8
	SqlParserRULE_insertStatement    = 9
	SqlParserRULE_updateStatement    = 10
	SqlParserRULE_deleteStatement    = 11
	SqlParserRULE_setClause          = 12
	SqlParserRULE_columnsClause      = 13
	SqlParserRULE_insertValuesSpec   = 14
	SqlParserRULE_insertMultiValue   = 15
	SqlParserRULE_dataValue          = 16
	SqlParserRULE_selectStatement    = 17
	SqlParserRULE_fromClause         = 18
	SqlParserRULE_whereClause        = 19
	SqlParserRULE_groupByClause      = 20
	SqlParserRULE_havingClause       = 21
	SqlParserRULE_orderByClause      = 22
	SqlParserRULE_orderByExpr        = 23
	SqlParserRULE_limitClause        = 24
	SqlParserRULE_offsetClause       = 25
	SqlParserRULE_searchCondition    = 26
	SqlParserRULE_predicate          = 27
	SqlParserRULE_expression         = 28
	SqlParserRULE_joinExpr           = 29
	SqlParserRULE_joinOp             = 30
	SqlParserRULE_useStatement       = 31
	SqlParserRULE_columnTypeExpr     = 32
	SqlParserRULE_columnExprList     = 33
	SqlParserRULE_columnsExpr        = 34
	SqlParserRULE_columnExpr         = 35
	SqlParserRULE_aggregateFunction  = 36
	SqlParserRULE_columnIdentifier   = 37
	SqlParserRULE_nestedIdentifier   = 38
	SqlParserRULE_constant           = 39
	SqlParserRULE_realLiteral        = 40
	SqlParserRULE_tableExpr          = 41
	SqlParserRULE_tableIdentifier    = 42
	SqlParserRULE_databaseIdentifier = 43
	SqlParserRULE_floatingLiteral    = 44
	SqlParserRULE_numberLiteral      = 45
	SqlParserRULE_literal            = 46
	SqlParserRULE_interval           = 47
	SqlParserRULE_keyword            = 48
	SqlParserRULE_identifier         = 49
	SqlParserRULE_enumValue          = 50
	SqlParserRULE_ifNotExists        = 51
)

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SqlParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SqlParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) DdlStatement() IDdlStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDdlStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDdlStatementContext)
}

func (s *StatementContext) DmlStatement() IDmlStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDmlStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDmlStatementContext)
}

func (s *StatementContext) SystemStatement() ISystemStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISystemStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISystemStatementContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SqlParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SqlParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SqlParserVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SqlParser) Statement() (localctx IStatementContext) {
	this := p
	_ = this

	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SqlParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(107)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SqlParserCREATE:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(104)
			p.DdlStatement()
		}

	case SqlParserDELETE, SqlParserINSERT, SqlParserSELECT, SqlParserUPDATE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(105)
			p.DmlStatement()
		}

	case SqlParserUSE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(106)
			p.SystemStatement()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IDmlStatementContext is an interface to support dynamic dispatch.
type IDmlStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDmlStatementContext differentiates from other interfaces.
	IsDmlStatementContext()
}

type DmlStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDmlStatementContext() *DmlStatementContext {
	var p = new(DmlStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SqlParserRULE_dmlStatement
	return p
}

func (*DmlStatementContext) IsDmlStatementContext() {}

func NewDmlStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DmlStatementContext {
	var p = new(DmlStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SqlParserRULE_dmlStatement

	return p
}

func (s *DmlStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *DmlStatementContext) SelectStatement() ISelectStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectStatementContext)
}

func (s *DmlStatementContext) InsertStatement() IInsertStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInsertStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInsertStatementContext)
}

func (s *DmlStatementContext) UpdateStatement() IUpdateStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUpdateStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUpdateStatementContext)
}

func (s *DmlStatementContext) DeleteStatement() IDeleteStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeleteStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeleteStatementContext)
}

func (s *DmlStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DmlStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DmlStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SqlParserListener); ok {
		listenerT.EnterDmlStatement(s)
	}
}

func (s *DmlStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SqlParserListener); ok {
		listenerT.ExitDmlStatement(s)
	}
}

func (s *DmlStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SqlParserVisitor:
		return t.VisitDmlStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SqlParser) DmlStatement() (localctx IDmlStatementContext) {
	this := p
	_ = this

	localctx = NewDmlStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SqlParserRULE_dmlStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(113)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SqlParserSELECT:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(109)
			p.SelectStatement()
		}

	case SqlParserINSERT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(110)
			p.InsertStatement()
		}

	case SqlParserUPDATE:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(111)
			p.UpdateStatement()
		}

	case SqlParserDELETE:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(112)
			p.DeleteStatement()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IDdlStatementContext is an interface to support dynamic dispatch.
type IDdlStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDdlStatementContext differentiates from other interfaces.
	IsDdlStatementContext()
}

type DdlStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDdlStatementContext() *DdlStatementContext {
	var p = new(DdlStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SqlParserRULE_ddlStatement
	return p
}

func (*DdlStatementContext) IsDdlStatementContext() {}

func NewDdlStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DdlStatementContext {
	var p = new(DdlStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SqlParserRULE_ddlStatement

	return p
}

func (s *DdlStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *DdlStatementContext) CreateDatabase() ICreateDatabaseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateDatabaseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateDatabaseContext)
}

func (s *DdlStatementContext) CreateTable() ICreateTableContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateTableContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateTableContext)
}

func (s *DdlStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DdlStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DdlStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SqlParserListener); ok {
		listenerT.EnterDdlStatement(s)
	}
}

func (s *DdlStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SqlParserListener); ok {
		listenerT.ExitDdlStatement(s)
	}
}

func (s *DdlStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SqlParserVisitor:
		return t.VisitDdlStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SqlParser) DdlStatement() (localctx IDdlStatementContext) {
	this := p
	_ = this

	localctx = NewDdlStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SqlParserRULE_ddlStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(117)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(115)
			p.CreateDatabase()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(116)
			p.CreateTable()
		}

	}

	return localctx
}

// ISystemStatementContext is an interface to support dynamic dispatch.
type ISystemStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSystemStatementContext differentiates from other interfaces.
	IsSystemStatementContext()
}

type SystemStatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySystemStatementContext() *SystemStatementContext {
	var p = new(SystemStatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SqlParserRULE_systemStatement
	return p
}

func (*SystemStatementContext) IsSystemStatementContext() {}

func NewSystemStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SystemStatementContext {
	var p = new(SystemStatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SqlParserRULE_systemStatement

	return p
}

func (s *SystemStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *SystemStatementContext) UseStatement() IUseStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUseStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUseStatementContext)
}

func (s *SystemStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SystemStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SystemStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SqlParserListener); ok {
		listenerT.EnterSystemStatement(s)
	}
}

func (s *SystemStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SqlParserListener); ok {
		listenerT.ExitSystemStatement(s)
	}
}

func (s *SystemStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SqlParserVisitor:
		return t.VisitSystemStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SqlParser) SystemStatement() (localctx ISystemStatementContext) {
	this := p
	_ = this

	localctx = NewSystemStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SqlParserRULE_systemStatement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(119)
		p.UseStatement()
	}

	return localctx
}

// ICreateDatabaseContext is an interface to support dynamic dispatch.
type ICreateDatabaseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCreateDatabaseContext differentiates from other interfaces.
	IsCreateDatabaseContext()
}

type CreateDatabaseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCreateDatabaseContext() *CreateDatabaseContext {
	var p = new(CreateDatabaseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SqlParserRULE_createDatabase
	return p
}

func (*CreateDatabaseContext) IsCreateDatabaseContext() {}

func NewCreateDatabaseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CreateDatabaseContext {
	var p = new(CreateDatabaseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SqlParserRULE_createDatabase

	return p
}

func (s *CreateDatabaseContext) GetParser() antlr.Parser { return s.parser }
